--- a/Vue/package.json
+++ b/Vue/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "leaflet-routing-machine": "^3.2.12",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
@@ -22,6 +23,7 @@
     "@types/jsdom": "^21.1.3",
     "@types/node": "^18.18.5",
     "@vitejs/plugin-vue": "^4.4.0",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vue/cli": "^5.0.8",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.1",
@@ -29,6 +31,7 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
+    "leaflet": "^1.9.4",
     "npm-run-all2": "^6.1.1",
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
