--- a/Vue/package.json
+++ b/Vue/package.json
@@ -16,9 +16,10 @@
     "ol": "^8.2.0",
     "ol-contextmenu": "^5.3.0",
     "ol-ext": "^4.0.13",
+    "typescript": "^5.3.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
-    "vue3-openlayers": "^3.2.0"
+    "vue3-openlayers": "^3.2.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
@@ -26,7 +27,6 @@
     "@types/jsdom": "^21.1.3",
     "@types/node": "^18.18.5",
     "@vitejs/plugin-vue": "^4.4.0",
-    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vue/cli": "^5.0.8",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.1",
@@ -34,9 +34,7 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
-    "leaflet": "^1.9.4",
     "npm-run-all2": "^6.1.1",
-    "typescript": "~5.2.0",
     "vite": "^4.4.11",
     "vitest": "^0.34.6",
     "vue-tsc": "^1.8.19"
