--- a/Vue/package.json
+++ b/Vue/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@terraformer/arcgis": "^2.1.2",
     "axios": "^1.6.2",
     "ol": "^8.2.0",
     "ol-contextmenu": "^5.3.0",
