--- a/Vue/package.json
+++ b/Vue/package.json
@@ -29,16 +29,19 @@
     "@types/node": "^18.18.5",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/cli": "^5.0.8",
+    "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.4.0",
-    "cypress": "^13.6.2",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "jest": "^24.9.0",
+    "jest-fetch-mock": "^3.0.3",
     "jsdom": "^22.1.0",
     "npm-run-all2": "^6.1.1",
     "vite": "^4.4.11",
     "vitest": "^0.34.6",
+    "vue-jest": "^5.0.0-0",
     "vue-tsc": "^1.8.19"
   }
 }
