--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Use node 18.18.0
         uses: actions/setup-node@v2
         with:
-          node-versions: 18.18.0
+          node-version: 18.18.0
       - name: Install dependencies
         run: npm ci
       - name: Run tests
