--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Use node 18.18.0
