--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@vue/eslint-config-typescript": "^12.0.0",
+    "esbuild-wasm": "^0.19.11",
     "eslint-plugin-vue": "^9.20.1"
   }
 }
