--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -13,6 +13,7 @@ jobs:
           node-version: 18.18.0
       - name: Install dependencies
         run: npm ci
+        working-directory: ./Vue
       - name: Run tests
         run: npm run test:unit
         working-directory: ./Vue
