--- a/Vue/package.json
+++ b/Vue/package.json
@@ -22,6 +22,7 @@
     "ol": "^8.2.0",
     "ol-contextmenu": "^5.3.0",
     "ol-ext": "^4.0.13",
+    "sweetalert2": "^11.10.3",
     "typescript": "^5.3.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
