--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
-    },
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.vitest.json"
-    }
-  ],
-
+  "compilerOptions": {
+    "allowJs": true,
+    "files": [],
+    "references": [
+      {
+        "path": "./tsconfig.node.json"
+      },
+      {
+        "path": "./tsconfig.app.json"
+      },
+      {
+        "path": "./tsconfig.vitest.json"
+      }
+    ]
+  }
 }
