--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@terraformer/arcgis": "^2.1.2",
     "axios": "^1.6.2",
     "axios-mock-adapter": "^1.22.0",
-    "eslint-plugin-vue": "^9.20.1",
     "ol": "^8.2.0",
     "ol-contextmenu": "^5.3.0",
     "ol-ext": "^4.0.13",
@@ -24,16 +23,12 @@
     "vue3-openlayers": "^3.2.1"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@types/jsdom": "^21.1.3",
     "@types/node": "^18.18.5",
     "@vitejs/plugin-vue": "^4.6.2",
-    "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.1",
     "eslint": "^8.49.0",
-    "eslint-plugin-jest": "^27.6.3",
+    "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
-    "npm-run-all2": "^6.1.1",
     "vite": "^4.4.11",
     "vitest": "^0.34.6"
   }
